// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`mergeWorkspaceAndUserSettings > should omit ignored user setting and keep project one 1`] = `
{
  "enableAnalyticalDashboardPermissions": "projectValue",
  "userSetting": "userValue",
  "workspaceSetting": "projectValue",
}
`;

exports[`mergeWorkspaceAndUserSettings > should prioritize user setting over project one 1`] = `
{
  "setting": "userValue",
  "userSetting": "userValue",
  "workspaceSetting": "projectValue",
}
`;
